fix alignment of text on album and artist detail pages

--- a/app/less/default/core/utilities.less
+++ b/app/less/default/core/utilities.less
@@ -7,6 +7,6 @@
 }
 
 .horizontal-padding {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
