--- a/app/less/default/modules/dropdowns.less
+++ b/app/less/default/modules/dropdowns.less
@@ -37,6 +37,10 @@
             color: @white;
         }
     }
+
+    .media {
+        height: 69px;
+    }
 }
 
 // The dropdown menu (ul)
